Changelog
=========

1.0.4 (unreleased)
------------------

- Update workflows for new contentpage teaser feature.
  [jone]

- Update workflows for Plone 4.3.4.
  [jone]


1.0.3 (2014-09-10)
------------------

- onegov_edu_workflow: Added delete permission to editor in state Intern.
  [lknoepfel]


1.0.2 (2014-07-10)
------------------

- Add Viewlet to push ie11 into ie10 mode.
  [tschanzt]


1.0.1 (2014-06-12)
------------------

- Remove unused Page and Paragraph from onegovedu_workflow_policy
  [elioschmutz]


1.0 (2014-06-12)
----------------

- Init release