@@ -21,7 +21,6 @@ class OneGovEDULayer(PloneSandboxLayer):
 
         z2.installProduct(app, 'Products.CMFPlacefulWorkflow')
         z2.installProduct(app, 'ftw.contentpage')
-        z2.installProduct(app, 'simplelayout.types.common')
         z2.installProduct(app, 'ftw.subsite')
 
     def setUpPloneSite(self, portal):
