@@ -47,7 +47,6 @@ setup(name='onegov.edu',
         'ftw.upgrade >= 1.11.0',
         'plonetheme.onegov',
         'setuptools',
-        'simplelayout.types.common',
         'simplelayout.types.flowplayerblock',
         'simplelayout.ui.base >= 3.0.3',
         ],
