@@ -4,6 +4,10 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
+- Remove "simplelayout.common.types" since it is not installed (metadata.xml)
+  and is no longer needed in "edubs.policy".
+  [mbaechtold]
+
 - Update workflows for new contentpage teaser feature.
   [jone]
 
